# Let-sGO

./: .breakpoints  .gitignore  .replit  README.md  main.py  pyproject.toml  todolist.txt
GOS/GO/: GO.py  GO.spec  MusicList.txt  build.bat  build.sh  build_with_logo.bat  build_with_logo.sh  getpkg.sh  m2e.sh  makeExecutable.sh  option.py  pkgget.bat  testAAA.py  testingAttensionPlease.py  testingAttensionPlease.sh
GOS/GO/APP/UnixFamilly/Linux/Normal/: info.txt
GOS/GO/APP/UnixFamilly/Linux/Spec/Replit/: info.txt
GOS/GO/APP/UnixFamilly/Linux/Spec/Termux/: info.txt
GOS/GO/APP/UnixFamilly/OSX/CLI/: info.txt
GOS/GO/APP/window/HasOwnLogo/: info.txt
GOS/GO/win_option_file/: option.py
PythonInstaller/: Readme.md
