[tool.poetry]
name = "repl-nix-let-sgo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_let_sgo"}]

[tool.poetry.dependencies]
python = "^3.10"
python-wars-solo = "^3.0.5"
keyboard = "0.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
